Add .gitignore, change WSGI user

--- a/apache/vhost.conf
+++ b/apache/vhost.conf
@@ -2,7 +2,7 @@
     ServerName update.rabinovitch.ca
     DocumentRoot /Users/brab/Sites/git_updater
 
-    WSGIDaemonProcess updater user=updater processes=3 threads=6 display-name=%{GROUP}
+    WSGIDaemonProcess updater user=brab processes=3 threads=6 display-name=%{GROUP}
     WSGIProcessGroup updater
     WSGIScriptAlias / /Users/brab/Sites/git_updater/apache/django.wsgi
 
